<resources>

    <string name="app_name">Dogg</string>

    <!-- Tabs Labels -->
    <string name="potty">Potty</string>
    <string name="history">History</string>
    <string name="pets">Pets</string>

    <!-- Button Text Labels -->
    <string name="add_potty">Save Potty</string>
    <string name="save_changes">Save Changes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="add_field">Add new field</string>
    <string name="empty_fields">No Fields</string>
    <string name="empty_potties">No Potties</string>

    <!-- Context Menu Text -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_pet_as_default_menu">Set pet as default</string>

    <!-- Menu Options Text Labels -->
    <string name="add_pet">Add new pet</string>
    <string name="add_pet_type">Add new pet type</string>
    <string name="edit_pet_types">Edit pet types</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <!-- **Also "delete" -->


    <!-- Fields Text -->
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="description">Description</string>
    <string name="edit_fields">Edit Fields</string>
    <string name="field_title">Title</string>
    <string name="field_description">Description</string>

    <!-- Toast Text Labels -->
    <string name="toast_pet_set_as_default">Default pet is set.</string>
    <string name="set_pet_as_default">This is the default pet</string>

    <!-- Checkbox Text Labels -->
    <string name="pee_potty">Pee</string>
    <string name="poo_potty">Poop</string>
    
    <!-- List Item Label -->
    <string name="peed">Peed</string>
    <string name="pooped">Pooped</string>

    <!-- Dialog Box Text -->
    <string name="dialog_title_delete">Delete?</string>
    <string name="dialog_message_delete">Are you sure you want to delete this? Delete cannot be undone.</string>

    <!-- Divider Text Labels -->
    <string name="divider_potty_info">Potty Information</string>
    <string name="divider_potty_fields">Extra Information</string>
    <string name="divider_pet_information">Pet Information</string>
    <string name="divider_pet_type">Pet Type</string>
    <string name="divider_about_app">About Dogg</string>

    <!-- Error Text Labels -->
    <string name="error_invalid_pet_title">Invalid pet title</string>
    <string name="error_invalid_pet_name">Invalid pet name</string>
    <string name="error_invalid_pet_breed">Invalid pet breed</string>
    <string name="error_invalid_template_id">Invalid template id</string>
    <string name="error_invalid_potty_id">Invalid potty id</string>
    <string name="error_no_pet_specified">No pet was specified</string>
    <string name="error_date_in_past">Invalid date. Cannot be in the past</string>
    <string name="error_invalid_statistic_item">Invalid statistic item</string>
    <string name="error_invalid_statistic_key">Invalid statistic key</string>
    <string name="error_invalid_field_title">Invalid field title</string>
    <string name="error_invalid_field_description">Invalid field description</string>
    <string name="error_invalid_pet_type">Invalid pet type</string>
    <string name="error_invalid_pet_type_title">Invalid pet type title</string>
    <string name="error_invalid_pet_type_description">Invalid pet type description</string>

    <!-- Title Text Labels -->
    <string name="title_potty">Potty on %s</string>
    <string name="title_potty_info">Potty Information</string>
    <string name="title_potty_list">Potty History</string>
    <string name="title_field">Potty Field</string>
    <string name="title_field_list">Potty Fields</string>
    <string name="title_pet">Pet</string>
    <string name="title_pet_list">Pets</string>
    <string name="title_pet_type">Pet Type</string>
    <string name="title_pet_type_list">Pet Types</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About Dogg</string>

    <!-- Delta Views -->
    <string name="delta_days">Days</string>
    <string name="delta_weeks">Weeks</string>
    <string name="delta_months">Months</string>
    <string name="delta_years">Years</string>

    <!-- Columns for History -->
    <string name="column_id">ID</string>
    <string name="column_pet">Pet Name</string>
    <string name="column_poo">Poo?</string>
    <string name="column_pee">Pee?</string>
    <string name="column_date">Date</string>
    <string name="column_time">Time</string>
    <string name="column_comment">Comments</string>
    <string name="column_none">[Skip]</string>

    <!-- Settings Content -->
    <string name="settings_about">About</string>
    <string name="settings_about_summary">About Dogg %1$s</string>

    <!-- Application About -->
    <string name="about_app">Dogg was created for the pet owner.</string>

    <!-- Developer Information -->
    <string name="about_author">Developer: Ryan A Johnson</string>
    <string name="about_contact">Email: rjcmf@mail.umkc.edu</string>
    <string name="about_website">Website: http://ryanxjohnson.com/</string>

</resources>