<?xml version="1.0" encoding="utf-8"?>
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<LinearLayout
			android:id="@+id/help_container"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
			android:orientation="vertical"
		>
			<edu.umkc.rjcmf.dogg.views.DividerView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/divider_about_app"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_app"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_author"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:autoLink="all"
				android:text="@string/about_contact"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:autoLink="all"
				android:text="@string/about_website"
			/>

			
		</LinearLayout>
	</ScrollView>
