<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dogg="http://schemas.android.com/apk/res/edu.umkc.rjcmf.dogg" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <edu.umkc.rjcmf.dogg.views.DividerView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/divider_pet_information" />

        <TableRow>

            <EditText
                android:id="@+id/title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textCapWords|textEmailSubject" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/breed"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/breed"
                android:inputType="textCapWords|textEmailSubject" />
        </TableRow>

        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textCapSentences|textShortMessage|textAutoCorrect" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/make_default"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_pet_as_default" />

        <edu.umkc.rjcmf.dogg.views.DividerView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/divider_pet_type" />

        <edu.umkc.rjcmf.dogg.views.CursorSpinner
            android:id="@+id/type"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            dogg:auto_hide="false"
            dogg:display_field="title"
            dogg:uri="pets/types" />
    </TableLayout>

</merge>